# ghmm

./: .cvsignore  CMakeLists.txt  COPYRIGHT.txt  Makefile.am  README  README.Win  README.cvs  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  version.m4  win_config.h
ghmm/: .cvsignore  Makefile.am  Makefile.in  bayesian_hmm.c  bayesian_hmm.h  block_compression.c  cfbgibbs.c  cfbgibbs.h  cluster.c  cluster.h  const.h  continuous_fbgibbs.c  dhsm_model.c  dhsm_viterbi.h  discrime.c  discrime.h  fbgibbs.c  fbgibbs.h  foba.c  foba.h  gauss_tail.c  gauss_tail.h  ghmm.h  ghmm_internals.c  ghmm_internals.h  ghmmutil.h  gradescent.c  gradescent.h  internal.h  kbest.c  kbest.h  kbestbasics.c  kbestbasics.h  linkedlist.c  linkedlist.h  matrix.c  matrix.h  matrixop.c  mes.c  mes.h  (+59 more)
ghmm++/: DiscretePD.h  DiscretePD_test.cpp  Emissions.cpp  Emissions.h  GHMM.h  GHMM_AbstractModel.cpp  GHMM_AbstractModel.h  GHMM_AbstractModelT.hh  GHMM_ContinuousModel.cpp  GHMM_ContinuousModel.h  GHMM_DiscreteModel.cpp  GHMM_DiscreteModel.h  GHMM_DiscreteModelT.hh  GHMM_Document.cpp  GHMM_Document.h  GHMM_DoubleMatrix.cpp  GHMM_DoubleMatrix.h  GHMM_DoubleVector.h  GHMM_Emission.cpp  GHMM_Emission.h  GHMM_GMLAlphabet.h  GHMM_GMLClass.h  GHMM_GMLClassWriter.cpp  GHMM_GMLContinuousModel.cpp  GHMM_GMLContinuousModel.h  GHMM_GMLDataNode.cpp  GHMM_GMLDataNode.h  GHMM_GMLDiscreteModel.cpp  GHMM_GMLDoc.cpp  GHMM_GMLEmission.cpp  GHMM_GMLEmission.h  GHMM_GMLState.cpp  GHMM_GMLState.h  GHMM_GMLTransition.h  GHMM_IntMatrix.h  GHMM_IntVector.cpp  GHMM_IntVector.h  GHMM_ModelFactory.cpp  GHMM_SWDiscreteModel.cpp  GHMM_SWDiscreteModel.h  (+40 more)
ghmm++/examples/: Makefile.am  chmm.cpp  coin_toss_test.cpp  create_sequence.cpp  dna.cpp  gene_hmm.gml  generiere_nvs_old_files.cpp  ghmm_convert.cpp  nvs.sqd  read_cxml.c  read_graphml.cpp  read_xml.cpp  sequence_test.cpp  testviterbi.cpp  train_model.cpp  vector_test.cpp
ghmmwrapper/: INSTALL  MANIFEST.in  Makefile  Makefile.am  class_change.py  ghmm.py  ghmmhelper.py  ghmmunittests.py  ghmmwrapper.i  gql.c  mixture.py  modhmmer.py  new_ghmmex.py  pclasschange.c  pclasschange.h  pyghmm.py  read_cxml.c  read_cxml.h  sclass_change.c  sclass_change.h  sdclass_change.c  sdclass_change.h  setup.py  test2.xml  test_ghmm.py  test_ghmmex.py  test_label.py  test_scluster.py  test_switch.py  test_tie.py  wrapper_alphabet.i  wrapper_cmodel.i  wrapper_cseq.i  wrapper_dmodel.i  wrapper_dpmodel.i  wrapper_dseq.i  wrapper_xmlfile.i  xmlutil.py
ghmmwrapper/examples/: continuousHMM.py  continuousMixHMM.py  discreteHMM.py
ghmmwrapper/ghmm_gato/: GatoGlobals.py  HMMEd.py
ghmmwrapper/ghmm_obsolete/: GraphUtil.py
ppghmm++/: GHMM_AbstractModel.cpp  GHMM_AbstractModel.h  GHMM_ContinuousModel.cpp  GHMM_ContinuousModel.h  GHMM_DiscreteModel.cpp  GHMM_DiscreteModel.h  GHMM_Document.h  GHMM_DoubleMatrix.h  GHMM_DoubleVector.cpp  GHMM_Emission.cpp  GHMM_Emission.h  GHMM_IntVector.cpp  GHMM_IntVector.h  GHMM_Sequence.h  GHMM_Sequences.cpp  GHMM_Sequences.h  GHMM_State.cpp  GHMM_State.h  GHMM_Transition.h  Makefile.am  begin_code.h  coin_toss_test.cpp  generiere_nvs.cpp  generiere_nvs_old_files.cpp  nvs.xml  test3.xml
tests/: .cvsignore  Makefile.am  Makefile.in  chmm.c  chmm_test.c  coin_toss_test.c  generate_PHI.c  ghmmunittests.c  label_higher_order_test.c  libxml-test.c  mcmc.c  read_smodel.c  root_finder_test.c  sequences_old_format.c  sequences_test.c  shmm_viterbi_test.c  two_states_three_symbols.c  xml_parser_test.c
tests/data/: Makefile.am
tools/: .cvsignore  Makefile.am  Makefile.in  cluster.c  ghmm-config.in  probdist.c  scluster.c  smix_hmm.c  smo2xml.c
trunk/ghmm/: AUTHORS  COPYRIGHT.txt  Makefile.am  Makefile.in  README  README.Win  README.cvs  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.in
trunk/ghmm/Gato/: .cvsignore  EditObjectAttributesDialog.py  Graph.py  HMMEd.py  setup.py  xmlutil.py
trunk/ghmm/HMMEd/: HMMEd  HMMEd.py  HMMEditor.py  Makefile.am  ObjectHMM.py  setup.py
trunk/ghmm/VisualC/: Makefile.am  ghmm.dsw
trunk/ghmm/WWW/: installation.html  updateWeb.sh
trunk/ghmm/doc/: .cvsignore  Makefile.am  Makefile.in  docu.dxx.in  ghmm.dtd  ghmm.dtd.1.0  xml_example.xml  xmlio_design.fig
trunk/ghmm/ghmm/: Makefile.am  bayesian_hmm.c  cfbgibbs.c  cfbgibbs.h  cluster.c  cluster.h  const.h  continuous_fbgibbs.c  continuous_fbgibbs.h  dhsm_foba.c  dhsm_foba.h  dhsm_viterbi.c  discrime.c  discrime.h  fbgibbs.c  fbgibbs.h  foba.c  foba.h  gauss_tail.c  gauss_tail.h  ghmm.h  ghmm_internals.c  ghmm_internals.h  ghmmconfig.h.in  ghmmutil.h  gradescent.c  gradescent.h  kbest.c  kbest.h  kbestbasics.c  kbestbasics.h  linkedlist.c  matrix.c  matrix.h  matrixop.c  mes.c  mes.h  model.c  model.h  modelutil.c  (+57 more)
trunk/ghmm/ghmm++/: DiscretePD.cpp  DiscretePD.h  DiscretePD_test.cpp  Emissions.cpp  Emissions.h  GHMM.h  GHMM_AbstractModel.cpp  GHMM_AbstractModel.h  GHMM_AbstractModelT.hh  GHMM_Alphabet.cpp  GHMM_Alphabet.h  GHMM_Computation.h  GHMM_ContinuousModel.cpp  GHMM_ContinuousModel.h  GHMM_DiscreteModel.cpp  GHMM_DiscreteModel.h  GHMM_DiscreteModelT.cpp  GHMM_Document.cpp  GHMM_Document.h  GHMM_DoubleMatrix.cpp  GHMM_DoubleMatrix.h  GHMM_DoubleVector.cpp  GHMM_DoubleVector.h  GHMM_Emission.cpp  GHMM_Emission.h  GHMM_GMLAlphabet.cpp  GHMM_GMLAlphabet.h  GHMM_GMLClass.cpp  GHMM_GMLDataNode.cpp  GHMM_GMLDataNode.h  GHMM_GMLDiscreteModel.cpp  GHMM_GMLDiscreteModel.h  GHMM_GMLDoc.cpp  GHMM_GMLDoc.h  GHMM_GMLEmission.cpp  GHMM_GMLState.cpp  GHMM_GMLTransition.cpp  GHMM_IntMatrix.cpp  GHMM_IntMatrix.h  GHMM_IntVector.cpp  (+43 more)
trunk/ghmm/ghmmwrapper/: .cvsignore  Graph.py  HMMEd.py  INSTALL  Makefile  Makefile.am  class_change.py  clust1.sqd  ghmm.py  ghmmhelper.py  ghmmunittests.py  ghmmwrapper.i  gql.c  mixture.py  modhmmer.py  multexon-4.xml  new_ghmmex.py  pclasschange.c  pclasschange.h  pyghmm.py  read_cxml.c  read_cxml.h  sclass_change.c  sclass_change.h  sdclass_change.c  sdclass_change.h  seq_test.sqd  setup.py  test.smo  test_ghmm.py  test_scluster.py  test_switch.py  test_tie.py  wrapper_alphabet.i  wrapper_arrays.i  wrapper_cmodel.i  (+5 more)
(+127 files in other folders)
