#  author       : Achim Gaedke
#  filename     : ghmm/tests/Makefile.am
#  created      : DATE: April 2001
#  $Id$

# tests and examples

INCLUDES=-I$(top_srcdir)

#these tests will not be installed
noinst_PROGRAMS = root_finder_test
root_finder_test_SOURCES = root_finder_test.c

LDADD = ../ghmm/libghmm.a



