dnl  author       : Achim Gaedke
dnl  filename     : ghmm/configure.in
dnl  created      : DATE: 2001-04-04
dnl  $Id$
dnl __copyright__

dnl Process this file with autoconf to produce a configure script.
AC_INIT(ghmm/smodel.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(ghmm,0.3)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_RANLIB
AC_PROG_AWK
AC_PATH_PROG(RM,rm)
AC_PATH_PROG(DOCXX,doc++)
AC_PATH_PROG(LATEX,latex)
AC_PATH_PROG(DVIPS,dvips)

AC_PATH_PROG(EXPECT_FOR_DEJAGNU,expect)
AC_PATH_PROG(RUNTEST_FOR_DEJAGNU,runtest)

dnl this macro is in acinclude.m4! (modified gsl.m4)
dnl aborts on failure
AM_PATH_GSL(0.7,,AC_MSG_ERROR("GSL Version 0.7 or higher required."))

dnl Checks for libraries.
AC_CHECK_LIB(pthread, pthread_join)
AC_CHECK_LIB(expat, XML_ParserCreate)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(expat.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

AC_HEADER_TIME
AC_STRUCT_TM

dnl AC_CHECK_FUNCS(tmpnam mkstemp)
dnl AC_CHECK_FUNCS(gettimeofday)

dnl append flags for gsl
CFLAGS="$CFLAGS $GSL_CFLAGS"
LIBS="$LIBS $GSL_LIBS -lgslblas"
dnl CPPFLAGS="$CPPFLAGS -I`$GSL_CONFIG --prefix`/include"

dnl experimental things can be switched on or off
AC_ARG_ENABLE(experimental,[  --enable-experimental   enable experimental features],
if test "x$enable_experimental" != "xno" ; then
AC_DEFINE_UNQUOTED(__EXPERIMENTAL__,$enable_experimental,include experimental features)
fi
)

AC_OUTPUT(Makefile doc/Makefile ghmm/Makefile tools/Makefile tests/Makefile doc/docu.dxx tools/ghmm-config)



